(bug 25830) fix JS preview causing the page to "jump"
Originally a patch by DieBuche <diebuche@gmail.com>, fixed to apply on
master (only whitespace changes were needed), with multiple new tweaks and
fixes.

The patch introduces fadeTo(..., 0.4) instead of fadeIn/fadeOut, causing
the preview not to be removed, but only faded out slightly. The reason
for this change is twofold:
* We do not want to completely remove the elements, which is what the old
  version did. This causes the edit field to jump up and then back down
  when the preview is reinserted.
* We do not want to display a huge blank white space where the preview
  used to be before it disappeared.

Instead of scrolling to the top, we scroll straight to the preview. This
works when the preview is set to appear below edit field and possibly with
non-default skins. (And also is much neater.) Thanks to Jdlrobson for
noticing this issue.

Additionally, this patch modifies the .mw-ajax-loader class defined in
shared.css. It used to be defined with weird negative margins and big
padding, probably to make it closer to the page title when inserted below
it (on default skins). I got rid of the margins and the padding, replacing
it with a simple height: definition (to accomodate the throbber gif
inside); this shouldn't cause any issues anywhere, especially since quick
grep over mediawiki/core shows it only used once, right in LivePreview code.

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -803,9 +803,7 @@ div.gallerytext {
 	background-image: url(images/ajax-loader.gif);
 	background-position: center center;
 	background-repeat: no-repeat;
-	padding: 16px;
-	position: relative;
-	top: -16px;
+	height: 32px;
 }
 
 .mw-small-spinner {
